# confero

./: CHANGES.md  README.md  confero.opam  dune-project  dune-workspace.dev
lib/: collation_element.ml  collation_element.mli  collation_mapping.ml  collation_mapping.mli  confero.ml  confero.mli  dune  prereq.ml  sort_key.ml  sort_key.mli  uucp_ext.ml
lib/ducet/: allkeys_supp.txt  confero_ducet.ml  confero_ducet.mli  dune
test/: dune  test_ducet.ml
