opam-version: "2.0"
name: "confero"
version: "0.0.1"
synopsis: "Unicode Collation"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "LGPL-3.0-or-later WITH LGPL-3.0-linking-exception"
homepage: "https://paurkedal.github.com/paurkedal/confero/"
bug-reports: "https://paurkedal.github.com/paurkedal/confero/issues"
dev-repo: "git+https://github.com/paurkedal/confero.git"
depends: [
  "angstrom" {>= "0.14.0"}
  "angstrom-unix"
  "cmdliner"
  "dune" {>= "2.9"}
  "fmt" {>= "0.8.7"}
  "iso639"
  "ocaml" {>= "4.08.1"}
  "uucp" {>= "15.0.0"}
  "uunf" {>= "15.0.0"}
  "uutf"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
extra-source "lib/ducet/allkeys.txt" {
  src: "https://www.unicode.org/Public/UCA/15.0.0/allkeys.txt"
  checksum: "sha512=26dda70e65d38afd5da36fce32a89615880a50e10518545d638fc0112aa7816e3c245bd719de7d55dd205c82581415fc04a86f3401f3e91607f0caaf368c0761"
}
