(test
 (name test_ducet)
 (libraries fmt confero confero.ducet)
 (deps (:data CollationTest_NON_IGNORABLE_SHORT.txt))
 (action
  (run %{test} %{data})))

(rule
 (targets CollationTest_NON_IGNORABLE_SHORT.txt)
 (mode fallback)
 (deps CollationTest.zip)
 (action
  (with-stdout-to %{targets}
   (run unzip -p %{deps} CollationTest/%{targets}))))

(rule
 (targets CollationTest.zip)
 (mode fallback)
 (action
  (run wget --quiet -O %{targets}
        "https://www.unicode.org/Public/UCA/15.0.0/CollationTest.zip")))
