(library
 (name confero_ducet)
 (public_name confero.ducet)
 (libraries confero uucp))

(rule
 (targets allkeys.ml)
 (deps
  (:gen %{exe:gen/gen_allkeys.exe})
  (:inputs allkeys.txt))
 (action (with-stdout-to %{targets} (run %{gen} %{inputs}))))

(rule
 (targets allkeys.txt)
 (mode fallback)
 (action
  (run wget --quiet -O %{targets}
    "https://www.unicode.org/Public/UCA/15.0.0/allkeys.txt")))
